# template_python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  example.secrets.toml  pixi.toml  pyproject.toml  pyrightconfig.json
.docker/: precommit.Dockerfile
.github/workflows/: ci.yml  pull_request_template.md
docs/source/: api-reference.rst  conf.py  getting-started.rst  index.rst  modules.rst  package_name.rst
src/package_name/: core.py
template_python/: hello.py
template_python/utils/: __init__.py  logger.py  settings.py
tests/: test_main.py
